[package]
name = "cowin-slack"
version = "0.1.0"
authors = ["Tanmay Chaudhry <tanmay.chaudhry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.3", features=["blocking", "json"]}
openssl = { version = "0.10.34", features = ["vendored"] }
failure = "0.1.8"
chrono = "0.4"
chrono-tz = "0.5"
serde_json = "1.0"
clap = "3.0.0-beta.2"
serde = {version = "1.0", features = ["derive"]}